# Quark-Engine

./: .gitattributes  README.md
SpaceshipsDemo/: README.md
SpaceshipsDemo/spaceships/: CMakeLists.txt  gameplay.cpp  module.hpp  physics.cpp  spaceships.cpp  util.cpp
builds/performance_test/quark/qmesh/: sphere.qmesh
builds/performance_test/quark/shaders/: texture.frag.spv
examples/: README.md
examples/ecs_basics/: README.md  api.hpp  ecs_basics.cpp  ecs_basics.hpp  mod_main.cpp
examples/ecs_particles/: README.md  api.hpp  ecs_particles.cpp  ecs_particles.hpp  mod_main.cpp
examples/performance_test/: README.md  performance_test.cpp  performance_test.hpp
examples/rendering_basics/: README.md  api.hpp  mod_main.cpp  rendering_basics.cpp  rendering_basics.hpp
examples/spaceships/: README.md  api.hpp  spaceships.cpp  spaceships.hpp
examples/text_rendering/: README.md  api.hpp  mod_main.cpp  text_rendering.cpp  text_rendering.hpp
plugins/performance_test/: api.hpp  mod_main.cpp
